fixed footer alignment

--- a/stylesheets/ml/misc.less
+++ b/stylesheets/ml/misc.less
@@ -461,7 +461,6 @@ footer {
 
         }     
     }
-    .mz-cms-block{text-align: center;}
     .ml-header-global-cart-wrapper, .ml-header-global-cart-wrapper:hover{
         #global-cart{display: none!important;}
     }
@@ -473,17 +472,6 @@ footer {
         }
     } 
     .mz-l-pagecontent{ padding: 25px 8.5px;}
-    
-
-    footer {
-        .email-container {
-            margin-right: 75px;
-        }
-        .social-links,.mz-pagefooter-copyright {
-            text-align: center;
-        }
-        
-    } 
 
 }
 
